# multi-agent-soccer-orchestration

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yml  pyproject.toml  ruff.toml
app/: main.py
app/agents/: __init__.py  conversation_response_agent.py  football_data_agent.py  supervisor_agent.py  web_search_agent.py
app/api/: __init__.py  chat_router.py
app/controllers/: __init__.py  agents_controller.py
app/core/: __init__.py  azure_openai_client.py  graph_builder.py
app/domain/: __init__.py  enums.py
app/domain/models/: __init__.py  conversation_state.py  team_models.py  user_question.py
app/schemas/: question_schema.py
app/services/: __init__.py  config_service.py  sports_data_service.py
app/tools/: __init__.py  football_api_tools.py
