[project]
name = "langgraph-soccer-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "langgraph>=0.4.8",
    "llama-index>=0.12.40",
    "pydantic>=2.11.5",
]

[dependency-groups]
lint = [
    "ruff>=0.11.13",
]
