[project]
name = "langgraph-soccer-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "gunicorn>=23.0.0",
    "ipython>=9.3.0",
    "langchain-openai>=0.3.27",
    "langchain-tavily>=0.2.4",
    "langgraph>=0.4.8",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
lint = [
    "ruff>=0.11.13",
]
